Adiconando uma tipagem roubusta para definir interfaces para dados que vem do sanity no blogCard.tsx

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,7 @@
   --card-foreground: oklch(0.98 0.00 0);
   --popover: oklch(0.25 0.00 0);
   --popover-foreground: oklch(0.98 0.00 0);
-  --primary: oklch(0.6959 0.1491 162.48);       /* Primary - Verde/Azul */
+  --primary: oklch(69.588% 0.14907 162.508);       /* Primary - Verde/Azul */
   --primary-foreground: oklch(0.98 0.00 0);
   --secondary: oklch(0.43 0.09 167);     /* Secondary - Verde/Azul mais intenso */
   --secondary-foreground: oklch(0.98 0.00 0);
